[package]
name = "tractus"
version = "0.1.0"
authors = ["Y0hy0h <Y0hy0h@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "tractus"
path = "src/lib.rs"

[[bin]]
name = "tractus"
path = "src/main.rs"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
itertools = "0.8.0"
petgraph = { version = "0.4.13", features = ["serde-1"] }
structopt = "0.2.18"
horrorshow = "0.6.6"
log = "0.4.8"
env_logger = "0.6.2"
serde = { version = "1.0.98", features = ["rc"] }
serde_json = "1.0.40"
dialoguer = "0.4.0"
clap-verbosity-flag = "0.2.0"
notify = "4.0.12"
ctrlc = "3.1.3"
failure = "0.1.5"
regex = "1.2.1"
websocket = "0.23.0"

[dev-dependencies]
insta = "0.8.2"
pretty_assertions = "0.6.1"
